--- a/Main/templates/tampilan.html
+++ b/Main/templates/tampilan.html
@@ -1,21 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Product List</title>
-</head>
-<body>
-    <h1>Product List</h1>
-    <ul>
-        {% for product in products %}
-        <li>
-            <strong>{{ product.name }}</strong><br>
-            Price: ${{ product.price }}<br>
-            Description: {{ product.description }}<br>
-            Stock: {{ product.stock }}<br>
-            Category: {{ product.category }}
-        </li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+<img src= "https://tse2.mm.bing.net/th?id=OIP.RYYXfrqQD-BDLcv67g9CBwHaFu&pid=Api&P=0&h=220" alt="SIgma">
+
+<h1>往事只能回味 - 韩宝仪</h1>
+<p1>Selamat datang wir di toko saya</p1>
+
