Penambahan file lagi

--- a/Main/templates/tampilan.html
+++ b/Main/templates/tampilan.html
@@ -1,5 +1,16 @@
-<img src= "https://tse2.mm.bing.net/th?id=OIP.RYYXfrqQD-BDLcv67g9CBwHaFu&pid=Api&P=0&h=220" alt="SIgma">
-
-<h1>往事只能回味 - 韩宝仪</h1>
-<p1>Selamat datang wir di toko saya</p1>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Selamat datang di TokoSerbaAda</title>
+</head>
+<body>
+    <img src="https://tse3.mm.bing.net/th?id=OIP.D5RE8hu4XijW8MGwjqMmmgHaEs&pid=Api&P=0&h=220" alt="Beras Porang Image">
+    <h1>Selamat datang di TokoSerbaAda</h1>
+    <p>Nama Produk: Beras Porang 250gram</p>
+    <p>Harga: Rp.25000</p>
+    <p>Deskripsi: Produk olahan dari umbi porang yang diolah menjadi butiran mirip beras. Umbi porang dikenal memiliki kandungan glukomanan yang tinggi, serat larut yang bermanfaat untuk pencernaan dan dapat membantu menurunkan kolesterol</p>
+    <p>Stock barang: 5</p>
+</body>
+</html>
